# xjtuportal

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  config.advanced.example.toml  config.example.toml
docs/api-md/: index.md
docs/api-md/xjtuportal/: config.md  crypto.md  error.md  index.md  interface.md  portal.md  session.md  xjtuportal.md
exp/: login.py  pixi.toml  session_api.py
scripts/: check.sh
src/: config.rs  crypto.rs  error.rs  interface.rs  lib.rs  main.rs  portal.rs  session.rs
tests/: auto_login.rs
