[package]
name = "xjtuportal"
version = "0.3.4"
edition = "2024"
authors = ["Peilin Fan <peilin.fan@foxmail.com>"]
license = "MIT"
description = "Automatic XJTU campus portal login CLI"

[dependencies]
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
get_if_addrs = "0.5"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["fs", "macros", "rt"] }
toml = "0.8"
toml_edit = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
